@@ -12,23 +12,25 @@ AUX freshclam.conf 64 RMD160 39f5a64cadb0f766605b62a2019303b0ef6b0a36 SHA1 8d112
 AUX freshclam.rc 1070 RMD160 cdd42aa9b9999e3c53e3f28443fb0bdf024c426f SHA1 9fc65761d9d9dbb8565d9abb5e634d73304ceede SHA256 436ddaf181cfb3bc84ad6f7a1858fbb5353ad079405016094b4fc0008b7ce28c
 AUX lib-ld.m4 3417 RMD160 7b412510e7ef9966f70ed29937e3556283128a9b SHA1 8b72b8f5f76e41e4ca0f2521c06c568490894a84 SHA256 18c4c458009da32c9daf0ea332a539e5edc82ba009b6c2faac004626313f00e5
 DIST clamav-0.96.1.tar.gz 40568982 RMD160 f0708b921c8b01a4309fe741ec141ab8cbdf2351 SHA1 cdb24490f402748cbfb57cc87592fe77b470e0a5 SHA256 413dd25907059068da2a367d2b330fbc37d5d2764eb3b047214ce754a9ca74ea
+DIST clamav-0.96.5.tar.gz 41164924 RMD160 70c465548395301b83bb2f5428aa383825089af4 SHA1 a7253e30d40e0c03964a60ed589b356a115b26c5 SHA256 83a683d51eceb5aaf0c249efb3d9d95aa4fd8bbc1f05817ab7b1030f6d84d059
 EBUILD clamav-0.96.1.ebuild 4482 RMD160 742d2e71ef9343c58f2328b68d208e86e1f26494 SHA1 85eb9dd2d8ab388c467b2704af08b574b6913085 SHA256 7d97469ff105e47cb6f60203e6619f8cfa9f7d66426973658fe2dc2cc4d0792f
-MISC ChangeLog 49241 RMD160 41eee37ade5704500674fe4f963d0790feafdcae SHA1 7d9798f87b1d097b0f1b69bf7e2d87a54bff1615 SHA256 37bef30ba32b375834abb8850474600e42b538a3e8e54c4695f1172a48d83241
+EBUILD clamav-0.96.5.ebuild 4482 RMD160 742d2e71ef9343c58f2328b68d208e86e1f26494 SHA1 85eb9dd2d8ab388c467b2704af08b574b6913085 SHA256 7d97469ff105e47cb6f60203e6619f8cfa9f7d66426973658fe2dc2cc4d0792f
+MISC ChangeLog 49368 RMD160 31c8b1b057e5ccb396c6a231e22e0994b4a10f9f SHA1 7eb19930954ef81fd0d8376a5cc66c5f9d10df89 SHA256 1bc4774c97863a2748999aa60f3411eadc23269a0ebbf3234c7dac0b5dbfa7ef
 MISC metadata.xml 320 RMD160 3546393e30d87f0b0a2fb17e2f15f57dd8c19661 SHA1 b959e38933418e6fc818ed40cd9a4921b8c66102 SHA256 e2a8c4c8bedbffe50a126c1c7395a4d92652c2d95347b9496d54aea1f230a22d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iQIcBAEBCAAGBQJNHMEgAAoJEHQ6UuhrqBBQXsAQAJooMitqAW0VRCer7Grww5De
-UHzy9frs9oWgo4PbWagwDCi3WbjC32RRiH9Og0uZ18UGrH7j+sDaTcK4CaSTfCux
-pp5YoTK1fH0JE3LqG4sx9yI+j2TYmorGcT4kZv/wjS04tf5LCwrKsqjLvtXL+Ufk
-60AVyIIYiQ1kCYKlNJemKjsCxLrNdYInXPjGPLtAVQDvNddM9csi5hc89VPQKqAv
-omW6NZLnN2jwviJyrO9VwUtPqNRe1ABOvardP2vFpL58CR/nb/AUfOar2UWMiqdZ
-2vL7F64q7iE+wyoxl/Z5Fneq+2alXhTsnA5GrVL7C96OApCrcy8wU+HJXgg88ClM
-nV4e/WSbd5TlTQGKrWhAn4W37EQCyZP2WvUCcll1eqH5OweWJzbWX02sNkGqEKoM
-p4yCeHiMqvYUZQGa3b/oe+YYlBSbKlA6OEfVaj62Z9FCUoX0lR+wP0AooHHO0hzq
-ggJpZ0Ew6IaQKZ88lyJhA1nEoSzLH066wbHuNDU+mVXMLDrJx3dy/2WdhG8XpTFx
-5riX37fk5UNttSNNkt8ZGnNhT8r+mQXjzpAm3eXy0mRL+87f1LNaGn+QcL3ylMzq
-JWplF9sl4FPwepGQ+zxLfi8B4tHmiErOf6vDeiQMe/V9lgNkxd3X857whIT78nNb
-mOVuKk25b7pe0pM7clt2
-=bs/X
+iQIcBAEBCAAGBQJNHP7lAAoJEHQ6UuhrqBBQO9wQAKcJHVTuLbM+Zsi6DhN2i7jY
+zkWnlPMisuId3n8rPJ/LuJln2USFZB6R4lQOTgeGOV+DMLjgzicnlJ8e6C4Yyb3N
+03xL1Tn7FElJx+E/j0Aw+a9+UFv8aH44TOLLSaZopztyAVtXlSENLEECTsuAzE0S
+RhmNJ6VsaeRdhjbfQV54SDy8TaehbT20KvdpW1efjn4rS1ICUZRu1Oq5ZxzCCWB4
+lOOVMNEFZJ0lQ+EXqc+UpQShZOM5EboMtR3aOA9VJvHULmAGodc6yz/GQZvCcwHn
++Ng3vDa1fToAVnyfzC+TYxBEpM9PScCdgI9VVJcqMrCsHbiK8kstjfvFE3nWFNqa
+fQYru2tS8FNz4FDimeGPXGm6vYlyYxypYLwQatqk2I7K/3VsNLWnuyoFJvcLTnF1
+c7AZTQ712clp1YB5d8d2mB9BjhNBTJD6zAwYy4AodRg/9cwY5oGTGRJ7ntiIidsN
+UvNPPZuRr3qtf/v4lrdNQAjU3UkIrTwejmEzZJCXCnbBqAPdVA0d268BxpK0SXUa
+cd3jO1A3xdhBznF51TcizahdqekCEoK4e8a1kT11hiRbNvLVqBARJljtMix/sGN8
+Sm+M7mG2KWLH4RiwjvatuuAUlTjWzG96WGui0t01WZcUisUYRF/wAmyZic5TTvPo
+0ehdTxtJ87PvfNbnRzxa
+=e18U
 -----END PGP SIGNATURE-----
